# o-device-emulator

./: .gitignore  README.md  config.example.yaml  device_emulator_daemon.py  pyproject.toml
device_emulator/: __init__.py  state.py  stats.py
device_emulator/devices/: __init__.py  base.py  eap.py  eap_components.py  eap_profile.py  gateway.py  gateway_profile.py  registry.py  switch.py  switch_profile.py  topology.py  wired.py
device_emulator/protocol/: __init__.py  adoption.py  auth.py  constants.py  discovery.py  framing.py  messages.py
device_emulator/services/: __init__.py  controller_client.py  discovery.py  manage.py  runner.py
doc/: DEVICE_PROTOCOL.md
test/: config.test.yaml  sim_cli.py  test_adoption.py  test_devices.py  test_protocol.py  test_state.py  test_topology.py
